# tech-esp

./: .gitignore
apps/netw_app/: .gitignore  CMakeLists.txt  partitions.csv
apps/netw_app/main/: CMakeLists.txt  app_main.c  network.c
apps/network/: CMakeLists.txt
apps/network/main/: network.c
components/: CMakeLists.txt  Kconfig
components/dlt/: Kconfig
components/dlt/include/: dlt_err.h  dlt_error.h  dlt_event.h
components/dlt_network/: CMakeLists.txt  Kconfig.in  dlt_network.c
components/dlt_network/include/: dlt_network.h
components/dlt_wifi/: CMakeLists.txt  Kconfig.in  dlt_wifi.c
components/dlt_wifi/include/: dlt_sec2.h  dlt_wifi.h
components/dulion_tech/: Kconfig
components/dulion_tech/include/: dt_err.h  dt_netif.h
components/network/: CMakeLists.txt  Kconfig.in  dt_network.c
components/network/include/: dlt_network.h  dt_network.h
components/provision/: CMakeLists.txt  Kconfig.in  dlt_provision.c  dt_provision.c
components/provision/include/: dlt_provision.h  dt_provision.h  sec2.h
mksrp/: .gitignore  Cargo.toml
mksrp/src/: main.rs
